<resources>
    <string name="app_name">Fitgram</string>
    <string name="grade_info">Проведённых тренировок:
    \n * 0-10 - Новичок
    \n * 10-50 - Личинка спортсмена
    \n * 50-100 - Спортсмен
    \n * 100-200 - Опытный спортсменюга
    \n * 200-300 - Терминатор
    \n * 300+ - Наталья Трухина"</string>
    <string name="item_title_exercise_power">Силовое упражнение</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_name_aerobic">Аэробные</string>
    <string name="tab_name_power">Силовые</string>
    <string name="item_title_exercise_aerobic">Аэробное упражнение</string>

    <string name="login_label_text">Fitgram</string>
    <string name="login_without_authorization_text">Продолжить без регистрации</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_anonymous_sign_in">Anonymous Sign In</string>
    <string name="label_account_linking">Account Linking</string>
    <string name="btn_link_account">Link Account</string>


    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="reload">Reload</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
    <string name="your_web_client_id">925768303344-0cnjvn08pf4d3kb6d8kvnjlaktgdkg83.apps.googleusercontent.com</string>
    <string name="slogan_text">твой верный помощник в мире фитнеса</string>
    <string name="hint_edit_phone_number">+7</string>
    <string name="get_code_btn_text">Получить код</string>
    <string name="google_sign_in_text_btn">Войти с Google</string>
    <string name="anonymous_sign_in_text_btn">войти анонимно</string>
    <string name="sms_code_info_text">SMS c кодом отправлено на номер \n %s</string>
    <string name="resent_button_text">ОТПРАВИТЬ ПОВТОРНО</string>
    <string name="resent_info_text">Отправить повторно через %s c</string>
    <string name="verify_button_text">ПРОВЕРИТЬ</string>
    <string name="hint_sms_code">* * * * * *</string>
    <string name="hint_name">Имя</string>
    <string name="hint_height">Рост</string>
    <string name="hint_weight">Вес</string>
    <string name="hint_sex">Пол</string>
    <string name="save_data">Сохранить</string>
    <string name="label_initial_data">Мои данные</string>

    // UserProfileFragment
    <string name="hint_rank">Ранг</string>
    <string name="hint_age">Возраст</string>
    <string name="hint_calories">Норма калорий</string>
    <string name="hint_target">Цель</string>
    <string name="change_user_button_text">Сменить пользователя</string>
    <string name="signIn_button_text">войти</string>
    <string name="info_text_not_user">Для ввода личных данных выполните вход</string>
    <string name="hint_surname">Фамилия</string>

    <string name="char_between_sets_and_reps_textView">x</string>
    <string name="constructor_training_label_textView">Введите название тренировки</string>
    <string name="constructor_training_footer_add_exercise_textView">Добавить упражнение</string>
    <string name="constructor_training_footer_cancel_button">Отмена</string>
    <string name="constructor_training_footer_save_button">сохранить</string>
    <string name="item_training_constructor_name_hint">Упражнение</string>
    <string name="button_delete_exercise">ButtonDeleteExercise</string>
    <string name="button_edit_exercise">ButtonEditExercise</string>
    <string name="constructor_cancel_button">Отмена</string>
    <string name="constructor_save_button">Сохранить</string>
    <string name="training_constructor_sets_hint">Подходы</string>
    <string name="exercise_constructor_duration_hint">Duration</string>
    <string name="exercise_constructor_sets_hint">Sets</string>
    <string name="exercise_constructor_reps_hint">Reps</string>
    <string name="dsimiss_helper_textView">x</string>
    <string name="helper_text">Заменить упражнение - нажмите на его название. Переместить упражнение  - нажмите и удерживайте. Удалить упражнение  - смахните.</string>
    <string name="user_weight_suffix">кг</string>
    <string name="user_height_suffix">см</string>

    <string name="user_weight_text">%s кг</string>
    <string name="user_height_text">%s см</string>
    <string name="man_sex_info">Мужчина</string>
    <string name="woman_sex_info">Женщина</string>
    <string name="throw_button_text">Сбросить</string>
    <string name="constructor_exercise_exercise_label_hint_edit_text">*Введите название упражнения</string>
    <string name="constructor_exercise_description_hint_edit_text">*Введите описание упражнения</string>
    <string name="fab_create_exercise_text">Создать упражнение</string>
    <string name="constructor_exercise_label_type_text_view">Тип упражнения:</string>
    <string name="constructor_exercise_warning_text_view">*Поля обязательные для заполнения</string>
</resources>
