<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/constructor_training_margin_bottom"
    android:orientation="vertical"
    android:padding="@dimen/constructor_training_padding">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/constructor_training_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/constructor_training_label_textView"
        android:inputType="text" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/constructor_training_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"
        tools:listitem="@layout/item_training_constructor_power_exercise" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/constructor_training_add_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/constructor_training_footer_add_exercise_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/constructor_training_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/constructor_training_footer_button_margin_top"
            android:text="@string/constructor_training_footer_cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constructor_training_add_textView" />

        <Button
            android:id="@+id/constructor_training_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/constructor_training_footer_button_margin_top"
            android:text="@string/constructor_training_footer_save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constructor_training_add_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
