<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="@dimen/btn_back_size"
        android:layout_height="@dimen/btn_back_size"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_top_of_the_top_view"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_textView"
        style="@style/MiddleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top_main"
        android:gravity="center"
        android:text="@string/sms_code_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_code_layout"
        style="@style/InputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_between_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="6"
            android:hint="@string/hint_sms_code"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_between_view"
        android:enabled="false"
        android:text="@string/verify_button_text"
        android:textAppearance="@style/ButtonTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_code_layout" />

    <TextView
        android:id="@+id/timer_textView"
        style="@style/FitgramTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_between_view"
        android:gravity="center"
        android:text="@string/resent_info_text"
        app:layout_constraintTop_toBottomOf="@id/verify_button" />

    <Button
        android:id="@+id/resend_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_between_link_view"
        android:enabled="false"
        android:text="@string/resent_button_text"
        android:textAppearance="@style/ButtonTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>