<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_label_textView"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/login_label_textView_margin_top"
        android:text="@string/login_label_text"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan_textView"
        style="@style/FitgramTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:text="@string/slogan_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_label_textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_layout"
        style="@style/InputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slogan_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="@string/hint_edit_phone_number"
            android:inputType="phone"
            android:maxLength="18" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/get_code_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/get_code_btn_text"
        app:layout_constraintTop_toBottomOf="@id/phone_number_layout" />

    <FrameLayout
        android:id="@+id/sign_in_google_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_code_button">

        <Button
            android:id="@+id/sign_in_google_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="2dp"
            android:backgroundTint="@color/white"
            android:text="@string/google_sign_in_text_btn"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="12dp"
            android:elevation="12dp"
            android:src="@drawable/google_logo" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sign_in_anonymous_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_google_layout">

        <Button
            android:id="@+id/sign_in_anonymous_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="2dp"
            android:backgroundTint="@color/white"
            android:text="@string/anonymous_sign_in_text_btn"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="12dp"
            android:elevation="12dp"
            android:src="@drawable/anonym_logo" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_for_status_bar"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
